Complete re-work

--- a/nextflow.config
+++ b/nextflow.config
@@ -68,7 +68,7 @@ process {
 
     queueSize                   = 20
         
-    errorStrategy               = "finish"
+    errorStrategy               = "ignore"
 
     withLabel: processing {
 
